fixed weather effects overflow issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,21 @@ body{
   align-items: center;
   height: 100vh;
   justify-content: center;
+  width: 100%;
 }
 
 main{
   margin: 50px 300px;
+  z-index: 1;
+}
+
+.top-bar{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .date{
@@ -50,9 +61,11 @@ main{
 
 .weather{
   position: absolute;
-  left: 0;
-  width: 100%;
   height: 100%;
+  left: 0;
+  overflow: hidden;
+  top: 0;
+  width: 100%;
 }
 
 .rain{
